# openclinic-in-django

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  requirements-ci.txt  role_audit_report.md
.agent/skills/: cicd-expert.md  docs-expert.md  python-expert.md  qa-expert.md  security-expert.md
.agent/skills/django-expert/: SKILL.md
.agent/skills/django-expert/resources/: README.md
.agent/skills/django-expert/resources/examples/migasfree-patterns/: README.md  package_viewset.py
.agent/skills/django-expert/resources/scripts/: check_queryset_optimization.py
.agent/skills/django-expert/resources/templates/: viewset-template.py
.github/: BADGES.md
.github/workflows/: codeql.yml  openclinic-ci.yml
docs/: index.md
docs/explanation/: i18n.md  security.md
docs/how-to/: configure.md  development.md  docker.md  install.md
docs/reference/: architecture.md  models.md
docs/tutorials/: getting-started.md  patient-management.md
locale/es_ES/LC_MESSAGES/: django.mo  django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt/LC_MESSAGES/: django.po
locale/sw/LC_MESSAGES/: django.po
medical/: admin.py  forms.py  lookups.py  urls.py  views.py
medical/fixtures/: initial_data.json
medical/migrations/: 0001_initial.py  0002_load_initial_data.py  0003_alter_patient_options_alter_patient_doctor_assigned_and_more.py
medical/models/: __init__.py  history.py  patient.py  problem.py  staff.py  test.py  time_stamped.py
medical/templates/: advanced_search.html  base_medical.html  history_antecedents_detail.html  history_antecedents_form.html  history_list.html  object_confirm_delete.html  patient_detail.html  patient_form.html  patient_medical_report.html  patient_relatives.html  patient_search.html  patient_tests.html  problem_connections.html  problem_detail.html  problem_form.html  problem_list.html  problem_search.html  problem_tests.html
medical/templates/includes/: history_antecedents_detail.html  patient_actions.html  patient_detail.html  patient_info.html  patient_list.html  problem_actions.html  problem_detail.html  problem_info.html  problem_list.html  test_actions.html  test_info.html
medical/templatetags/: setting.py
medical/tests/: conftest.py  test_does_not_exist.py
medical/tests/forms/: test_additional_forms.py  test_forms.py
medical/tests/models/: test_models.py  test_test_model.py
medical/tests/templatetags/: __init__.py  test_templatetags.py
medical/tests/views/: test_additional_views.py  test_views.py
medical/views/: __init__.py  base.py  history_views.py  patient_views.py  problem_views.py  test_views.py
openclinic/: health.py  urls.py  wsgi.py
openclinic/settings/: __init__.py  base.py  development.py  endless_conf.py  openclinic_conf.py  production.py  staging.py  test.py
requirements/: base.txt  base.txt # includes the base.txt  development.txt
static/css/: openclinic.css  print.css
static/datepicker/js/: bootstrap-datepicker.js
static/fonts/Ruda/: OFL.txt
templates/: base.html  login.html
templates/includes/: footer.html  toggle_login.html
templates/info/: base.html  install.html  license.html  readme.html  welcome.html
