[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclinic"
version = "1.0.0"
description = "Easy to use, open source, medical records system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"}
]
maintainers = [
    {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"}
]
keywords = [
    "django",
    "medical",
    "healthcare",
    "records",
    "open-source",
    "clinic",
    "health",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "Django>=5.2,<5.3",
    "crispy-bootstrap3>=2024.1",
    "django-grappelli>=4.0,<4.1",
    "django-crispy-forms>=2.3,<2.4",
    "django-el-pagination>=3.0.0,<4.1",
    "django-ajax-selects>=3.0,<3.1",
]

[project.optional-dependencies]
development = [
    "django-debug-toolbar>=4.4.0",
    "django-extensions>=3.2.0",
    "sqlparse>=0.5.0",
]
testing = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<4.9",
    "pytest-cov>=5.0,<6.0",
    "factory-boy>=3.3,<3.4",
    "coverage>=7.5,<8.0",
    "dj-database-url>=2.0,<3.0",
]
linting = [
    "ruff>=0.6.0",
    "black>=24.0,<25.0",
    "isort>=5.13,<5.14",
    "mypy>=1.9,<2.0",
    "django-stubs>=5.0,<5.1",
]
security = [
    "bandit[toml]>=1.7,<1.8",
    "safety>=3.2,<3.3",
]
production = [
    "gunicorn>=22.0,<23.0",
    "psycopg2-binary>=2.9,<2.10",
    "whitenoise>=6.6,<6.7",
]

[project.urls]
Homepage = "https://github.com/jact/openclinic-in-django"
Documentation = "https://github.com/jact/openclinic-in-django"
Repository = "https://github.com/jact/openclinic-in-django"
Issues = "https://github.com/jact/openclinic-in-django/issues"

[project.scripts]
openclinic = "manage:main"

[tool.setuptools]
packages = ["openclinic", "medical"]

# ============================================================
# RUFF CONFIGURATION (Deprecated format - use [lint] section)
# ============================================================

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
    "DJ",
    "RET",
    "RUF",
]
ignore = [
    "F841",  # Local variable is assigned but never used
    "E501",  # Line too long
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "C901",  # Function too complex
    "S101",  # Use of assert detected
    "T201",  # Print statement found
    "RUF005",  # Consider iterable unpacking
    # Django-specific (style suggestions, not errors)
    "DJ001",  # Avoid using null=True on string-based fields
    "DJ006",  # Do not use exclude with ModelForm
    "DJ007",  # Do not use __all__ with ModelForm
    "F401",  # Import but unused (for re-exports)
    "F403",  # Star imports used
    "F405",  # May be undefined from star import
    "E402",  # Module level import not at top
    "RUF012",  # Mutable class attributes should be ClassVar
    "B017",  # Assert blind exception
    "B904",  # raise within except without from
    "D205",  # 1 blank line required between summary line and description
    "D200",  # One-line docstring should fit on one line
    "D401",  # First line of docstring should be in imperative mood
    "N806",  # Variable in function should be lowercase
    "RUF022",  # __all__ is not sorted
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
    "*/static/*",
    "*/locale/*",
    "manage.py",
]

[tool.ruff.lint.isort]
known-first-party = ["openclinic", "medical"]
known-third-party = ["django", "grappelli"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "django.utils.timezone.now",
    "django.core.cache.cache.get",
]

# ==================== BLACK CONFIGURATION ====================

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# ==================== ISORT CONFIGURATION ====================

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_django = "django"
known_first_party = ["openclinic", "medical"]
skip_glob = ["*/migrations/*"]

# ==================== MYPY CONFIGURATION ====================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grappelli.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "crispy_forms.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "el_pagination.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ajax_select.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openclinic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "medical.*"
ignore_missing_imports = true

# ==================== PYTEST CONFIGURATION ====================

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "openclinic.settings.development"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["medical/tests", "openclinic/tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
    "--cov=medical",
    "--cov=openclinic",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
]

# ==================== COVERAGE CONFIGURATION ====================

[tool.coverage.run]
source = ["medical", "openclinic"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/locale/*",
    "*/static/*",
    "manage.py",
]
branch = true
parallel = true

[tool.coverage.paths]
source = [
    "medical/",
    "openclinic/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "\\.\\.\\.",
    "if DEBUG",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==================== BANDIT CONFIGURATION ====================

[tool.bandit]
exclude_dirs = [
    "*/migrations/*",
    "*/tests/*",
    "*/locale/*",
    "*/static/*",
]
skips = [
    "B101",
    "B601",
]

# ==================== POETRY CONFIGURATION (Optional) ====================

[tool.poetry]
name = "openclinic"
version = "1.0.0"
description = "Easy to use, open source, medical records system"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.2"
django-grappelli = "^4.0"
django-crispy-forms = "^2.3"
django-el-pagination = "^3.0"
django-ajax-selects = "^3.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.0"
django-extensions = "^3.2.0"
sqlparse = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
pytest-cov = "^5.0"
factory-boy = "^3.3"
coverage = "^7.5"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.0"
black = "^24.0"
isort = "^5.13"
mypy = "^1.9"

[tool.poetry.group.security.dependencies]
bandit = "^1.7"
safety = "^3.2"

[tool.poetry.group.production.dependencies]
gunicorn = "^22.0"
psycopg2-binary = "^2.9"
whitenoise = "^6.6"

[tool.poetry.scripts]
openclinic = "manage:main"
